# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  lint_and_pytest_checks.yml
gendiff/: __init__.py  build_diff.py  constants.py  formatter.py  gen_diff.py  gendiff.py  generate_diff.py  make_diff.py  parser.py  secondary_functions.py
gendiff/formatters/: json.py  json_format.py  plain.py  stylish.py  value_handling.py
gendiff/formatters/formatter_data/: data_handling.py  node_handling.py  plain_data.py  stylish_data.py
gendiff/lib/: data_handling.py  node_handling.py  parser.py  secondary_functions.py
gendiff/scripts/: gendiff.py  gendiff_script.py
gendiff/trying/: gen_diff.py
tests/: conftest.py  test_gendiff.py
tests/fixtures/: test_file_simple1.yml
